--- a/index.html
+++ b/index.html
@@ -2,140 +2,182 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SCP:SL Staff Application</title>
+<title>System Error</title>
 
 <style>
 body {
-    font-family: Arial, sans-serif;
-    background: #0b0f1a;
-    color: #fff;
     margin: 0;
+    font-family: Arial, sans-serif;
+    background: #f5f5f5;
+    overflow: hidden;
 }
 
-header {
-    background: #111827;
-    padding: 20px;
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
+/* broken layout */
+.header {
+    background: #2c2c2c;
+    color: white;
+    padding: 15px;
+    font-size: 20px;
 }
 
-.container {
-    max-width: 700px;
-    margin: 40px auto;
-    background: #1f2937;
-    padding: 25px;
-    border-radius: 10px;
-}
-
-input, textarea {
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 20px;
+.nav {
+    background: #444;
+    color: white;
     padding: 10px;
-    border-radius: 6px;
-    border: none;
-    background: #374151;
-    color: white;
 }
 
-button {
+/* misaligned content */
+.container {
+    display: flex;
+}
+
+.sidebar {
+    width: 200px;
+    background: #ddd;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.content {
+    flex: 1;
+    padding: 20px;
+}
+
+/* glitch text */
+.glitch {
+    color: black;
+    position: relative;
+}
+
+.glitch::before,
+.glitch::after {
+    content: attr(data-text);
+    position: absolute;
+    left: 0;
+}
+
+.glitch::before {
+    color: red;
+    animation: glitch1 0.3s infinite;
+}
+
+.glitch::after {
+    color: blue;
+    animation: glitch2 0.3s infinite;
+}
+
+@keyframes glitch1 {
+    0% { transform: translate(0); }
+    50% { transform: translate(2px, -2px); }
+    100% { transform: translate(0); }
+}
+
+@keyframes glitch2 {
+    0% { transform: translate(0); }
+    50% { transform: translate(-2px, 2px); }
+    100% { transform: translate(0); }
+}
+
+/* flicker */
+.flicker {
+    animation: flicker 2s infinite;
+}
+
+@keyframes flicker {
+    0%, 100% { opacity: 1; }
+    50% { opacity: 0.4; }
+}
+
+/* fake error popup */
+.popup {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: white;
+    border: 1px solid #999;
+    padding: 10px;
+    width: 250px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    font-size: 12px;
+}
+
+/* broken images */
+img {
     width: 100%;
-    padding: 12px;
-    border: none;
-    border-radius: 6px;
-    background: #3b82f6;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
+    height: 150px;
+    object-fit: cover;
 }
 
-button:hover {
-    background: #2563eb;
+/* screen shift glitch */
+.shift {
+    animation: shift 0.2s infinite;
 }
 
-.success {
-    text-align: center;
-    margin-top: 15px;
-    color: #22c55e;
+@keyframes shift {
+    0% { transform: translate(0); }
+    50% { transform: translate(2px, 1px); }
+    100% { transform: translate(0); }
 }
 </style>
 </head>
+
 <body>
 
-<header>SCP:SL Staff Application</header>
+<div class="header glitch" data-text="Dashboard_v2.4">Dashboard_v2.4</div>
+<div class="nav">Home | Profile | Settings | ???</div>
 
-<div class="container">
-    <form id="appForm">
-        <label>Steam ID</label>
-        <input type="text" id="steamid" required>
-        
-        <label>Discord Username</label>
-        <input type="text" id="username" required>
+<div class="container shift">
+    <div class="sidebar">
+        <p>Overview</p>
+        <p>Stats</p>
+        <p class="flicker">Loa̸d̴i̷n̵g̷...</p>
+        <p>Logs</p>
+    </div>
 
-        <label>Age</label>
-        <input type="number" id="age" required>
+    <div class="content">
+        <h2 class="glitch" data-text="System Status">System Status</h2>
+        <p>All systems operational.</p>
+        <p class="flicker">Warning: data mismatch detected</p>
 
-        <label>Why do you want to be staff?</label>
-        <textarea id="reason" rows="4" required></textarea>
+        <!-- broken image -->
+        <img src="broken_image.jpg" alt="">
 
-        <label>Experience</label>
-        <textarea id="experience" rows="4" required></textarea>
+        <p id="corruptText">Loading data...</p>
+    </div>
+</div>
 
-        <label>Hours Active Per Day</label>
-        <input type="text" id="hours" required>
-
-        <button type="submit">Submit Application</button>
-    </form>
-
-    <div class="success" id="successMsg"></div>
+<div class="popup">
+    ⚠ Error 0x80072F8F<br>
+    Connection interrupted.<br>
+    Attempting recovery...
 </div>
 
 <script>
-const webhookURL = "https://discord.com/api/webhooks/1474318470337269784/sFdT4kfPRWfhrjoPaVO6Gjqnbp93w8JXZmRR5IKUadnWNSJgkdsxnJg-G7TJU9A2IDl1"; 
+// corrupt text effect
+const text = "Retrieving user data...";
+let i = 0;
 
-document.getElementById("appForm").addEventListener("submit", async function(e) {
-    e.preventDefault();
+function corrupt() {
+    const el = document.getElementById("corruptText");
+    let output = "";
 
-    const data = {
-        steamid: document.getElementById("steamid").value,
-        username: document.getElementById("username").value,
-        age: document.getElementById("age").value,
-        reason: document.getElementById("reason").value,
-        experience: document.getElementById("experience").value,
-        hours: document.getElementById("hours").value
-    };
-
-    const payload = {
-        content: "**New SCP:SL Staff Application**",
-        embeds: [{
-            title: "Application",
-            color: 3447003,
-            fields: [
-                { name: "Steam ID", value: data.steamid },
-                { name: "Username", value: data.username },
-                { name: "Age", value: data.age },
-                { name: "Reason", value: data.reason },
-                { name: "Experience", value: data.experience },
-                { name: "Hours", value: data.hours }
-            ]
-        }]
-    };
-
-    try {
-        await fetch(webhookURL, {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify(payload)
-        });
-
-        document.getElementById("successMsg").innerText = "Application submitted!";
-        document.getElementById("appForm").reset();
-    } catch (error) {
-        document.getElementById("successMsg").innerText = "Error sending application.";
+    for (let j = 0; j < text.length; j++) {
+        if (Math.random() < 0.1) {
+            output += String.fromCharCode(33 + Math.random() * 94);
+        } else {
+            output += text[j];
+        }
     }
-});
+
+    el.innerText = output;
+}
+
+setInterval(corrupt, 100);
+
+// random console errors (feels real)
+setInterval(() => {
+    console.error("Uncaught TypeError: undefined is not a function");
+}, 2000);
 </script>
 
 </body>
