--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Player Management System - Broken</title>
-
 <style>
 body {
     margin: 0;
     font-family: "Segoe UI", Arial, sans-serif;
     background: #eef1f5;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 /* header bug */
@@ -18,15 +17,18 @@ body {
     color: white;
     padding: 12px;
     font-size: 18px;
-    width: 102%; /* overflow bug */
-    position: relative;
-    z-index: 5;
-    animation: jitter 0.2s infinite;
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    width: 110%;
+    transform: rotate(-1deg);
 }
 
-/* layout breaking */
+/* container broken */
 .container {
     display: flex;
+    flex-wrap: wrap;
+    position: relative;
 }
 
 /* sidebar glitch */
@@ -36,26 +38,30 @@ body {
     color: #ccc;
     height: 100vh;
     padding: 10px;
-    overflow: hidden;
-    animation: shift 5s infinite;
+    position: absolute;
+    top: 50px;
+    left: -20px;
+    transform: rotate(2deg) skewX(-2deg);
 }
 
 .sidebar div {
     padding: 8px;
+    position: relative;
+    left: calc(5px * (Math.random()));
 }
 
 .sidebar div.flicker {
-    animation: flicker 1.5s infinite;
-}
-
-.sidebar div:hover {
-    background: #3d4450;
+    animation: flicker 1.2s infinite;
 }
 
 /* main content */
 .main {
     flex: 1;
     padding: 15px;
+    position: absolute;
+    top: 60px;
+    left: 200px;
+    width: calc(100% - 200px);
 }
 
 /* cards breaking */
@@ -65,11 +71,13 @@ body {
     margin-bottom: 15px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    transform: skewX(-1deg);
-    animation: subtleShift 10s infinite;
+    position: relative;
+    top: calc(10px * (Math.random()));
+    left: calc(10px * (Math.random()));
+    transform: rotate(calc(-2deg + 4deg * (Math.random())));
 }
 
-/* table breaking */
+/* table broken */
 table {
     width: 100%;
     border-collapse: collapse;
@@ -77,18 +85,21 @@ table {
 
 td, th {
     padding: 8px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px dashed #ddd;
+    position: relative;
+    left: calc(5px * (Math.random()));
 }
 
-/* text overlap bug */
+/* overlapping text bug */
 .overlap {
     position: absolute;
-    top: 120px;
+    top: 150px;
     left: 300px;
     color: red;
     font-weight: bold;
     opacity: 0.7;
     font-size: 16px;
+    transform: rotate(-5deg);
 }
 
 /* flicker bug */
@@ -106,9 +117,10 @@ img {
     width: 100%;
     height: 120px;
     object-fit: cover;
+    transform: rotate(calc(-3deg + 6deg * (Math.random())));
 }
 
-/* jitter effect */
+/* jitter */
 .jitter {
     animation: jitter 0.15s infinite;
 }
@@ -119,18 +131,7 @@ img {
     100% { transform: translate(0,0); }
 }
 
-/* subtle layout shift */
-@keyframes shift {
-    0%,100% { transform: translateX(0); }
-    50% { transform: translateX(2px); }
-}
-
-@keyframes subtleShift {
-    0%,100% { transform: skewX(-1deg); }
-    50% { transform: skewX(1deg); }
-}
-
-/* scrollable log box */
+/* log box */
 .log {
     background: #0d1117;
     color: #c9d1d9;
@@ -140,10 +141,10 @@ img {
     overflow-y: scroll;
     font-size: 12px;
     border-radius: 5px;
+    transform: skewX(-2deg) rotate(-1deg);
 }
 </style>
 </head>
-
 <body>
 
 <div class="header jitter">Player Management System v2.4</div>
@@ -165,7 +166,7 @@ img {
             <table>
                 <tr><th>ID</th><th>Name</th><th>Status</th></tr>
                 <tr><td>1021</td><td>Ghosty</td><td>Online</td></tr>
-                <tr><td>1022</td><td>Nova</td><td class="flicker">Loading</td></tr>
+                
                 <tr><td>1023</td><td>???</td><td style="color:red;">NULL</td></tr>
                 <tr><td>1024</td><td>Delta</td><td style="color:red;">Sync Error</td></tr>
             </table>
@@ -178,7 +179,6 @@ img {
 
         <div class="card">
             <h3>Assets</h3>
-            <!-- broken image -->
             <img src="missing_texture.png">
         </div>
 
@@ -186,29 +186,15 @@ img {
 
 </div>
 
-<!-- random overlapping bug -->
 <div class="overlap">FATAL: UI DESYNC</div>
 
 <script>
-// generate realistic API log messages
+// realistic API log messages
 const logBox = document.getElementById("logBox");
-
 const errors = [
 "[ERROR] null cant fetch Ban_ip_list",
 "[ERROR] GET /api/banlist 500 Internal Server Error",
-"[ERROR] TypeError: Cannot read properties of null (reading 'ip')",
-"[ERROR] Failed to fetch Ban_ip_list from /api/security",
-"[ERROR] UnhandledPromiseRejection: fetch failed",
-"[ERROR] WebSocket connection lost (code:1006)",
-"[WARN] Retrying Ban_ip_list fetch (attempt 2)",
-"[WARN] Retrying Ban_ip_list fetch (attempt 3)",
-"[ERROR] Ban_ip_list sync aborted after 3 retries",
-"[ERROR] PlayerService: corrupted response (expected JSON, got null)",
-"[ERROR] SyntaxError: Unexpected token < in JSON at position 0",
-"[ERROR] Upstream API timeout (504 Gateway Timeout)",
-"[ERROR] Auth service returned invalid token",
-"[ERROR] Cache write failed: undefined value",
-"[WARN] Player 0 session stale",
+"
 "[INFO] GET /api/players 200 OK",
 "[INFO] POST /api/player/update 200 OK",
 "[INFO] GET /api/session/1022 200 OK",
@@ -225,13 +211,12 @@ function addLog() {
     logBox.scrollTop = logBox.scrollHeight;
 }
 
-// flood log gradually
 setInterval(addLog, 800);
 
-// subtle UI worsening
-setTimeout(() => { document.body.style.zoom = "1.02"; }, 10000);
-setTimeout(() => { document.querySelector(".sidebar").style.width = "260px"; }, 15000);
-setTimeout(() => { document.body.style.filter = "contrast(1.1) saturate(1.2)"; }, 20000);
+// progressively break layout
+setTimeout(() => { document.querySelector(".sidebar").style.left = "-40px"; }, 8000);
+setTimeout(() => { document.querySelector(".main").style.left = "220px"; }, 10000);
+setTimeout(() => { document.body.style.zoom = "1.02"; }, 12000);
 </script>
 
 </body>
