--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
 .main {
     flex: 1;
     padding: 15px;
-    position: absolute;
+    psolute;
     top: 60px;
     left: 200px;
     width: calc(100% - 200px);
@@ -132,7 +132,7 @@ img {
 </head>
 <body>
 
-<div class="header jitter">Player Management System v2.4</div>
+<div class="header jitter">PLAYERLIST-BANIG </div>
 
 <div class="container">
 
@@ -141,7 +141,7 @@ img {
         <div>Players</div>
         <div class="flicker">Sessions</div>
         <div>Logs</div>
-        <div style="color:red;">API ERROR</div>
+        <div stylv>
     </div>
 
     <div class="main">
