--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@ button:hover {
 </div>
 
 <script>
-const webhookURL = "NOT ADDED UNTIL I GET CLOUD FLARE HOSTED"; // ⚠️ Replace this
-
+const webhookURL = "XD U AINT GETTING MY WEBHOOK PLUS I AM USING A DISCORDBOT I MADE <3"; 
 document.getElementById("appForm").addEventListener("submit", async function(e) {
     e.preventDefault();
 
